[package]
name = "solana-geyser-test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = "0.14"
futures = "0.3"
log = "0.4"
env_logger = "0.11"
bs58 = "0.5"
anyhow = "1.0"
axum = { version = "0.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1"
futures = "0.3"

yellowstone-grpc-proto = "10.1.1"
yellowstone-grpc-client = "10.2.0"
rustls = { version = "0.23", features = ["aws-lc-rs"] }